@@ -1,15 +1,14 @@
 package com.connellboyce.authhub.controller;
 
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.util.ResourceUtils;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
+import java.nio.charset.StandardCharsets;
 
 @RestController
 @RequestMapping(value = {"", "/.well-known"})
@@ -32,10 +31,15 @@ public class WellKnownFileController {
 		}
 	}
 
+	// Must read via ClassPathResource#getInputStream, not ResourceUtils.getFile: once
+	// packaged into the executable jar, these files live inside BOOT-INF/classes/static
+	// and cannot be resolved to a java.io.File, only ever an InputStream.
 	private ResponseEntity<?> getTxtFileContents(String fileName) throws IOException {
-		String path = "classpath:static/" + fileName;
-		File file = ResourceUtils.getFile(path);
-		String contents = new String(Files.readAllBytes(file.toPath()));
+		ClassPathResource resource = new ClassPathResource("static/" + fileName);
+		String contents;
+		try (var inputStream = resource.getInputStream()) {
+			contents = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+		}
 		return ResponseEntity.ok()
 				.contentType(MediaType.TEXT_PLAIN)
 				.body(contents);
